RESOLVED FIXED160463
Removing IndexedDB WebsiteData can fail for some users
https://bugs.webkit.org/show_bug.cgi?id=160463
Summary Removing IndexedDB WebsiteData can fail for some users
Brady Eidson
Reported 2016-08-02 13:29:26 PDT
Removing IndexeDB WebsiteData can fail for some users If somebody removed website data in an earlier version of WebKit that only deleted sqlite3 files, the directories for the databases remain with -wal and -shm files. Further attempts to fully clear the directories will refuse to run, leaving behind those files. Those users will still see that site as taking up data in Safari preferences, and can't get out of that state without hitting the filesystem directly. Let's help them.
Attachments
Patch v1 (6.83 KB, patch)
2016-08-02 13:38 PDT, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-08-02 13:30:01 PDT
Brady Eidson
Comment 2 2016-08-02 13:38:42 PDT
Created attachment 285132 [details] Patch v1
Brady Eidson
Comment 3 2016-08-02 14:29:43 PDT
Darin Adler
Comment 4 2016-08-02 22:53:06 PDT
Comment on attachment 285132 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=285132&action=review > Source/WebCore/platform/sql/SQLiteFileSystem.cpp:96 > + // If any of the wal or shm files remain after the delete attempt, the overall delete operation failed. Should just say "any of the files"; "any of the wal or shm files" doesn’t match the code below that also looks at the main file!
Note You need to log in before you can comment on or make changes to this bug.